gtools 2.3.0
------------

- Update email address for Greg

- Add new 'smartbind' function, which combines data frames
  efficiently, even if they have different column names.

gtools 2.2.3
------------

 - setTCPNoDelay now compiles & works properly on Windows


gtools 2.2.2
------------

 - src/setTCPNoDelay.c: Add C source code for setTCPNoDelay.

 - NAMESPACE: Add UseDynLib to NAMESPACE so the shared library gets
   properly loaded.

 - Updated Greg's email address. 

gtools 2.2.1
------------

  - New function 'addLast' that adds functions to R's .Last() so
    that they will be executed when R is terminating.

  - New function setTCPNoDelay() that allows the TCP_NODELAY flag to
    be changed on socket objects.

gtools 2.1.0
------------

 - Added assert.R (and documentation)

 - Added the defmacro() function, extracted from Lumley T. "Programmer's Niche:
   Macros in {R}", R News, 2001, Vol 1, No. 3, pp 11--13, 
   \url{http://CRAN.R-project.org/doc/Rnews/}

 - Added DESCRIPTION and removed DESCRIPTION.in
