@@ -1,0 +1,5 @@
+ask <- function(msg="Press <RETURN> to continue: ")
+        {
+          cat(msg);
+          readLines(con=stdin(),n=1)
+        }
